# mtdsim

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  legacy.yaml  paper.yaml
figures/: CAPTIONS.md
src/mtdsim/: __init__.py  attacker.py  cli.py  config.py  defender.py  engine.py  manifest.py  metrics.py  rng.py  system.py  tables.py  viz.py
src/mtdsim/experiments/: __init__.py  ablation.py  adaptive.py  baseline.py  common.py  cost_weight_sensitivity.py  decoy_ratio_sweep.py  diversity_channel_decomposition.py  frequency_by_technique_count.py  frequency_sweep.py  parallelism_sweep.py  (+2 more)
tables/: ablation.csv  ablation.tex  adaptive_vs_nonadaptive.csv  adaptive_vs_nonadaptive.tex  baseline.csv  baseline.tex  cost_weight_sensitivity.csv  cost_weight_sensitivity.tex  decoy_ratio_sweep.csv  decoy_ratio_sweep.tex  diversity_channel_decomposition.csv  diversity_channel_decomposition.tex  frequency_by_technique_count_matched_asp.csv  frequency_by_technique_count_matched_asp.tex  frequency_by_technique_count_matched_overhead.csv  frequency_by_technique_count_matched_overhead.tex  frequency_sweep.csv  frequency_sweep.tex  frequency_sweep_knee_robustness.csv  frequency_sweep_knee_robustness.tex  parallelism_sweep.csv  parallelism_sweep.tex  sensitivity_size.csv  sensitivity_size.tex  sensitivity_speed.csv  sensitivity_speed.tex
tests/: conftest.py  test_attacker.py  test_config.py  test_defender.py  test_engine.py  test_experiments.py  test_metrics.py  test_monotonicity.py  test_revision.py  test_system.py  test_tables.py
