[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtdsim"
version = "1.0.0"
description = "Monte Carlo simulation of Moving Target Defense against an adaptive AI-driven attacker."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Logan Scott" }]
keywords = ["moving-target-defense", "mtd", "cybersecurity", "simulation", "monte-carlo"]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4", "black>=24.0"]

[project.scripts]
mtdsim = "mtdsim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mtdsim = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-q"
# Matplotlib 3.9 + newer pyparsing emit deprecation noise from mathtext ($f$)
# rendering; it is upstream and harmless to this project.
filterwarnings = [
    "ignore::DeprecationWarning:pyparsing.*",
    "ignore::DeprecationWarning:matplotlib.*",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
